--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,9 @@
-debug: true
-server:
-  port: 8080
-  servlet:
-    context-path: /cloudpan
 spring:
   jpa:
     hibernate:
       ddl-auto: update
-    database: mysql
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-  datasource:
-    username: root
-    password: 941104
-    url: jdbc:mysql://localhost:3306/cloudpan
-    driver-class-name: com.mysql.jdbc.Driver
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.DerbyDialect
+    database: derby
