--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--<groupId>mysql</groupId>-->
         <!--<artifactId>mysql-connector-java</artifactId>-->
         <!--<version>5.1.46</version>-->
